--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./style.css">
 </head>
-<button type="button" onclick="window.location.href='https://www.canva.com/design/DAF9mlTyYTw/gLCdGS1vLXYJe6KDj7B7GQ/edit?utm_content=DAF9mlTyYTw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton'"><strong>Catálogo Digital</strong></button>
+<button type="button" onclick="window.location.href='https://www.canva.com/design/DAGAR668FFM/Nnyioa2Swt3Ra1NSuzwhvA/edit?utm_content=DAGAR668FFM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton'"><strong>Catálogo Digital</strong></button>
 <form action="obrigado.html" method="get" onsubmit="abrirWhatsapp()">
   <button type="submit" class="botao-grande">Agendamento via whatsapp</button>
 </form>
-  <button type="button" onclick="window.location.href='https://api.whatsapp.com/send?phone=5511910324551&text=Oiie%20lu%20!%20Entrei%20pelo%20link%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20curso%20de%20extens%C3%A3o%20de%20c%C3%ADlios%20iniciante%20%E2%98%BA%EF%B8%8F'"><strong>Cursos</strong></button>
+  <button type="button" onclick="window.location.href='https://www.canva.com/design/DAF-w3YpFZo/v-sbjkTSKQETdU8_0fKsOA/edit?utm_content=DAF-w3YpFZo&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton'"><strong>Cursos</strong></button>
   <button type="button" onclick="window.location.href='https://www.canva.com/design/DAF-vFQI0UU/6x1qaBeRWYdOplgbo3nKlg/edit?utm_content=DAF-vFQI0UU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton'"><strong>Apresentação</strong></button>
 <a href="https://Instagram.com/luiza_eyelashes_">Instagram: luiza_eyelashes_</a>
 <body>
